# photometric-camera

./: CMakeLists.txt  README.md
shaders/: average_exposure_histogram.comp  average_exposure_histogram.comp.spv  build_exposure_histogram.comp  build_exposure_histogram.comp.spv  common.glsl  compile_shaders.bat  final_color_correction.comp  final_color_correction.comp.spv  gltf_pbr.frag  gltf_pbr.frag.spv  indexed_draw.vert  indexed_draw.vert.spv  indexed_draw_2.vert  indexed_draw_2.vert.spv  shadow_map_gen.vert  shadow_map_gen.vert.spv  triangle.frag.spv  triangle.vert.spv
src/: camera.cpp  camera.h  common.h  frame.cpp  frame.h  loader.cpp  loader.h  main.cpp  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  vendor_impls.cpp  vk_context.cpp  vk_context.h  window.cpp  window.h
